Fixed title text display
It was too high. heh.

--- a/styleMain.css
+++ b/styleMain.css
@@ -66,7 +66,6 @@ bar that encapsulates everything. */
 	text-align: center;
 	font-family: 'IM Fell DW Pica SC', serif;
 	color: white;
-	padding-top:25px;
 }
 
 /* logo controls the logo icon in the top left. */
